--- a/MovieProject/Views/CollectionCells/GenreCollectionViewCell.xib
+++ b/MovieProject/Views/CollectionCells/GenreCollectionViewCell.xib
@@ -30,7 +30,7 @@
                                         <color key="textColor" name="genreLabel"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Aw6-rN-21i">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Aw6-rN-21i">
                                         <rect key="frame" x="24" y="5.9999999999999982" width="6" height="19"/>
                                     </imageView>
                                 </subviews>
@@ -59,17 +59,18 @@
             </constraints>
             <connections>
                 <outlet property="genreNameLabel" destination="E0y-0X-7PW" id="JhX-LI-MjX"/>
+                <outlet property="iconImageView" destination="Aw6-rN-21i" id="V9o-ni-W8p"/>
             </connections>
             <point key="canvasLocation" x="-50.381679389312978" y="20.422535211267608"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="xmark.circle" catalog="system" width="128" height="123"/>
+        <image name="plus.circle" catalog="system" width="128" height="123"/>
         <namedColor name="genreBackground">
             <color red="0.86299997568130493" green="0.88899999856948853" blue="0.99900001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="genreLabel">
-            <color red="0.3919999897480011" green="0.44100001454353333" blue="0.93599998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.38823529411764707" green="0.4392156862745098" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
