--- a/MovieProject/Views/TableCells/CustomListTableViewCell.xib
+++ b/MovieProject/Views/TableCells/CustomListTableViewCell.xib
@@ -22,35 +22,54 @@
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ebb-It-E7x">
                         <rect key="frame" x="15" y="0.0" width="290" height="80"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qIU-rT-Ret">
-                                <rect key="frame" x="0.0" y="0.0" width="103.66666666666667" height="80"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qIU-rT-Ret">
+                                <rect key="frame" x="0.0" y="0.0" width="177.33333333333334" height="80"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DLe-Dj-1Je">
-                                        <rect key="frame" x="0.0" y="-1.3333333333333357" width="26.666666666666668" height="83.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="21.333333333333329" width="45" height="38"/>
                                         <color key="tintColor" systemColor="systemPinkColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="45" id="PLt-G3-Dfo"/>
+                                            <constraint firstAttribute="width" secondItem="DLe-Dj-1Je" secondAttribute="height" multiplier="13:10" id="m2X-wP-LkS"/>
+                                        </constraints>
                                         <imageReference key="image" image="heart.fill" catalog="system" symbolScale="large"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ListName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4X-Jc-vtx">
-                                        <rect key="frame" x="31.666666666666657" y="0.0" width="72" height="80"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="CZA-tY-0Ne">
+                                        <rect key="frame" x="49.999999999999993" y="16" width="127.33333333333331" height="48"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ListName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4X-Jc-vtx">
+                                                <rect key="frame" x="0.0" y="0.0" width="127.33333333333333" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G0R-eI-hSL">
+                                                <rect key="frame" x="0.0" y="24" width="127.33333333333333" height="24"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MovieCount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyq-hM-bRm">
+                                                        <rect key="frame" x="0.0" y="0.0" width="82.333333333333329" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <color key="textColor" systemColor="systemGrayColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" movie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvm-Dl-SzI" userLabel="film">
+                                                        <rect key="frame" x="82.333333333333343" y="0.0" width="45" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <color key="textColor" systemColor="systemGrayColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2oa-Ax-2gN">
-                                <rect key="frame" x="174.33333333333334" y="0.0" width="115.66666666666666" height="80"/>
+                                <rect key="frame" x="268.66666666666669" y="0.0" width="21.333333333333314" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="CustomListTableViewCell" text="MovieCount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyq-hM-bRm">
-                                        <rect key="frame" x="0.0" y="0.0" width="91.666666666666671" height="80"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ty0-6X-KY2">
-                                        <rect key="frame" x="96.666666666666657" y="3" width="19" height="74"/>
-                                        <color key="tintColor" systemColor="systemGray4Color"/>
-                                        <imageReference key="image" image="play.rectangle.fill" catalog="system" symbolScale="small"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowshape.turn.up.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wNz-iX-dWr">
+                                        <rect key="frame" x="0.0" y="1.6666666666666643" width="21.333333333333332" height="77"/>
+                                        <color key="tintColor" systemColor="systemGrayColor"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
@@ -74,10 +93,10 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="arrowshape.turn.up.forward" catalog="system" width="128" height="104"/>
         <image name="heart.fill" catalog="system" width="128" height="107"/>
-        <image name="play.rectangle.fill" catalog="system" width="128" height="93"/>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
